<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/back_sopfe3"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="250dp"
        android:layout_height="210dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="75dp"
        android:background="@android:color/transparent"

        >  <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/layoutInput"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_username"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textColorHint="@color/violet_1"
            android:hint="@string/username"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edt_password"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textColorHint="@color/violet_1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_error"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/orange_dark"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/edt_password"
            android:text="@string/txt_invalid_credentials"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_connect"
            android:layout_marginTop="15dp"
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient"
            android:textAllCaps="false"
            android:text="@string/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_visitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visiteur"
        android:clickable="true"
        android:textSize="20dp"
        android:textStyle="italic"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cardView"
        />

    <TextView
        android:id="@+id/txt_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:clickable="true"
        android:textSize="20dp"
        android:textStyle="italic"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_visitor"
        />

    <ProgressBar
        android:id="@+id/progressBar_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_about"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/violet_1"
        android:visibility="gone"
        android:progressBackgroundTint="@color/violet_1"
        />


</RelativeLayout>