<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_supervisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="12dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_sub_item"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/supervisor"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_sub_item"
                android:padding="12dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/violet_1"
                    android:text="@string/superviseurTitre"/>

                <TextView
                    android:id="@+id/txt_supervisor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noSupervisor"/>

            </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_confid_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/violet_1"
                android:layout_marginEnd="5dp"
                android:text="@string/confidentialite"/>
            <TextView
                android:id="@+id/txt_confid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"/>
            </LinearLayout>

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/txt_membersTitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/violet_1"
                android:text="@string/membreTitre"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/txt_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NoJuryMembers"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_error"
        android:layout_below="@+id/cv_supervisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/violet_1"
        android:visibility="gone"
        android:text="Error"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_description"
        android:visibility="visible"
        android:layout_below="@+id/cv_supervisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        >
    <ScrollView
        android:id="@+id/scrollViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/txt_description_project"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/descripProjTxt"
                android:gravity="center"
                />

        </LinearLayout>


    </ScrollView>
    </androidx.cardview.widget.CardView>
</RelativeLayout>