<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_itemProject"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/cardview_poster"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="18dp"
            android:src="@drawable/projet" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/cardview_poster"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:text="@string/titre"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_supervisor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title"
            android:gravity="center"
            android:layout_toRightOf="@+id/cardview_poster"
            android:text="@string/superviseur"
            android:textColor="#3A3838" />

        <TextView
            android:id="@+id/txt_confid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_supervisor"
            android:layout_toRightOf="@+id/cardview_poster"
            android:text="@string/confidentialite"
            android:textColor="#3A3838" />


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            />



    </RelativeLayout>



</androidx.cardview.widget.CardView>

</LinearLayout>