<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_edit_note"
        android:layout_weight="1"
        android:textColor="@color/violet_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_edit_note"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_student"
        android:layout_below="@+id/txt_edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">
        <RelativeLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/cap"/>
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_toEndOf="@id/img_profile"
                android:padding="2dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_identite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:text="@string/surnameforename"/>
                <TextView
                    android:id="@+id/txt_my_note"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/myMark"/>
                <TextView
                    android:id="@+id/txt_avg_note"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average"/>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_below="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout2"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nouvelle note : "
                    android:layout_marginLeft="15dp"
                    />

                <EditText
                    android:id="@+id/edt_new_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="20"
                    android:inputType="number">

                </EditText>

            </LinearLayout>

            <EditText
                android:id="@+id/edt_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Commentaire"
                android:layout_below="@+id/linearLayout2"
                android:gravity="center"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/btn_valider"
                android:layout_below="@+id/edt_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Valider"
                android:layout_centerHorizontal="true"
                android:background="@color/blue_light"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>